# the-crud-maker-mcp

./: .gitignore  pyproject.toml  requirements.txt  server.py
src/: server.py
src/templates/: entity.py
src/tools/: entity.py
