[project]
name = "the-crud-maker-mcp"
version = "0.1.0"
description = "MCP server for CRUD making"
dependencies = ["mcp[cli]==1.22.0"]

[project.scripts]
the-crud-maker-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
